@@ -1,3 +1,7 @@
+2019-12-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tiff: libtiff is updated to 4.1.0 release.
+
 2019-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/render.c (DrawPatternPath): Don't leak memory if
